# timetable_class

./: .gitignore  Cargo.toml
src/: main.rs
