[package]
name = "timetable_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["json"]}
tl = "0.7.7"
tokio = { version= "1.12.0", features=["full"]}
error-chain = "0.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = "0.12.2"
chrono = "0.4.30"
dotenvy = "0.15.7"
